--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 <body>
 	<ul>
 		<li>hello</li>
+		<li>world</li>
 		<li>你好</li>
 		<li>lofty</li>
+		<textarea id="textArea" class="ss" placeholder="这里是测试的文居中"></textarea>
 	</ul>
 </body>
 </html>
