--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<li>hello</li>
 		<li>world</li>
 		<li>你好</li>
+		<li>这是world页新添加的东西</li>
 		<li>lofty</li>
 		<textarea id="textArea" class="ss" placeholder="这里是测试的文居中"></textarea>
 	</ul>
